--- a/BlogEngine/BlogEngine.NET/admin/app/dashboard/dashboardView.html
+++ b/BlogEngine/BlogEngine.NET/admin/app/dashboard/dashboardView.html
@@ -138,11 +138,11 @@
                         </li>
                     </ul>
                 </div>-->
-                <div data-ng-repeat="n in news" class="form-group">
+                <!--<div data-ng-repeat="n in news" class="form-group">
                     <a href="{{n.OptionValue}}" target="_blank">
                         <img class="img-rounded" ng-src="https://blogengine.io/files/images/news/{{n.OptionName}}.png" style="max-width:100%;" alt="{{n.OptionName}}" />
                     </a>
-                </div>
+                </div>-->
                 <div id="news-spinner" class="list-group-item item-spinner">
                     <i class="fa fa-spinner fa-spin"></i>
                 </div>
